--- a/PROCFILE
+++ b/PROCFILE
@@ -1,1 +1,1 @@
-web: python manage.py migrate && gunicorn inventarios/inventarios.wsgi --log-file -
+web: python manage.py migrate && gunicorn inventarios.wsgi --log-file -
