--- a/inventarios/requirements.txt
+++ b/inventarios/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.7.2
-backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
 Django==4.2.3
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
@@ -10,3 +10,4 @@ gunicorn==20.1.0
 django_simple_history==3.3.0
 whitenoise==6.5.0
 djangorestframework-simplejwt==5.2.2
+psycopg2==2.8.6
