--- a/inventarios/requirements.txt
+++ b/inventarios/requirements.txt
@@ -10,4 +10,5 @@ gunicorn==20.1.0
 django_simple_history==3.3.0
 whitenoise==6.5.0
 djangorestframework-simplejwt==5.2.2
+psycopg-binary==3.1.10
 psycopg2==2.8.6
