--- a/inventarios/requirements.txt
+++ b/inventarios/requirements.txt
@@ -12,3 +12,7 @@ whitenoise==6.5.0
 djangorestframework-simplejwt==5.2.2
 psycopg-binary==3.1.10
 #psycopg2==2.8.6
+s3transfer==0.6.1
+boto3==1.26.135
+botocore==1.29.135
+django-storages==1.13.2
